<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity2"
    android:orientation="vertical"
    android:layout_weight="3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/orange">

    <LinearLayout
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_logo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:weightSum="7"
        android:background="@drawable/cmain2_logo"
        android:layout_weight="1.8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_weight="1"
               android:layout_width="wrap_content"
               android:layout_height="0dp"
               android:orientation="vertical"
               tools:ignore="UselessParent">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/create_an_account"
                   android:textSize="20sp"
                   android:textColor="@color/black"
                   android:textStyle="bold"/>
               <TextView
                   android:layout_marginTop="15dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/sign_up_to_continue"
                   android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="4.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="6.6">
              <TextView
                  android:layout_weight="0.2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:textSize="20sp"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:textAllCaps="true" />
             <LinearLayout
                 android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
                 <EditText
                     android:paddingStart="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_border"
                     android:hint="@string/odilkek_rustamov"
                     android:inputType="textPersonName"/>
             </LinearLayout>
              <TextView
                  android:layout_weight="0.2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/email"
                  android:textSize="20sp"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:textAllCaps="true"/>
              <LinearLayout
                  android:layout_weight="2"
                  android:layout_width="match_parent"
                  android:layout_height="0dp">
                  <EditText
                      android:paddingStart="10dp"
                      android:layout_marginTop="5dp"
                      android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:background="@drawable/edit_text_border"
                      android:hint="@string/odiljon1779_gmail_com"
                      android:inputType="textEmailAddress"/>
              </LinearLayout>
              <TextView
                  android:layout_weight="0.2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/password"
                  android:textAllCaps="true"
                  android:textSize="20sp"
                  android:textColor="@color/black"
                  android:textStyle="bold"/>
              <LinearLayout
                  android:layout_weight="2"
                  android:layout_width="match_parent"
                  android:layout_height="0dp">
                  <EditText
                      android:paddingStart="10dp"
                      android:layout_marginTop="5dp"
                      android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:background="@drawable/edit_text_border"
                      android:inputType="textPassword"
                      tools:ignore="RtlSymmetry"
                      android:autofillHints="username" />
              </LinearLayout>
          </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btn_get_stated"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_one_btn"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:text="@string/get_started"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:layout_gravity="bottom|center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>