<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity3"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/orange">
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_logo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="4"
        android:layout_weight="3"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/cmain2_logo"
        android:layout_height="0dp">

        <LinearLayout
            android:paddingTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_account"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_weight="2"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:weightSum="2.2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">
            <TextView
                android:layout_weight="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <EditText
                    android:paddingStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/odiljon1779_gmail_com"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_weight="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <EditText
                    android:paddingStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPassword"
                    tools:ignore="RtlSymmetry"
                    android:autofillHints="username" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btn_get_stated"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_two_btn"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:text="@string/get_started"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:layout_gravity="bottom|center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>







