<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/orange"
    android:orientation="vertical"
    android:weightSum="3">
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_logo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:tabBackground="@drawable/tab_background"
            android:backgroundTint="@color/orange"
            app:tabGravity="center"
            app:tabMode="fixed"
            app:tabIndicator="@null"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_get_stated"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_one_btn"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:text="@string/get_started"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_two_btn"
            app:backgroundTint="@null"
            android:text="@string/login"
            android:textSize="15sp"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>